--- a/src/TypeCalculator/Content/styles/typecalculator.scss
+++ b/src/TypeCalculator/Content/styles/typecalculator.scss
@@ -1,59 +1,12 @@
 @import 'typecolors';
 @import 'typesidebar';
+@import 'typestablelayout';
+@import 'typescolumnlayout';
+@import 'typedropdown';
 
 body {
     background: #6890f0;
 }
 
-.centered {
-    text-align: center;
-}
-
-#rightSection {
-    clear: right;
-}
-
 .main-section {
-    display:inline-block;
-}
-
-.type-column {
-  display: inline-block;
-  margin: 1px;
-  border: 1px solid black;
-  vertical-align: top;
-  background: white;
-  text-align: center;
-  font-size: 32px;
-
-  h2 {
-    padding: 10px;
-  }
-
-  .count {
-    color: black;
-    display: block;
-    background: whitesmoke;
-    border-bottom: 1px solid black;
-    padding-bottom: 2px;
-  }
-}
-
-.stretch.at-top {
-  background: #6890f0;
-}
-
-#statusBadge {
-  margin-left: 2px;
-}
-
-.type {
-  color: white;
-  display: block;
-  padding-bottom: 2px;
-}
-
-.types {
-    display: block;
-    border-top: 1px solid black;
 }
