Added MongoDb, cells in a column highlight now

--- a/src/TypeCalculator/Content/styles/typecalculator.scss
+++ b/src/TypeCalculator/Content/styles/typecalculator.scss
@@ -1,6 +1,4 @@
-@import 'typecolors';
 @import 'typesidebar';
-@import 'typestablelayout';
 @import 'typescolumnlayout';
 @import 'typedropdown';
 
@@ -9,4 +7,6 @@ body {
 }
 
 .main-section {
+    display: inline-block;
+    margin: 1px;
 }
