Create AddType form

--- a/src/TypeCalculator/Content/styles/typecalculator.scss
+++ b/src/TypeCalculator/Content/styles/typecalculator.scss
@@ -1,6 +1,7 @@
 @import 'typesidebar';
 @import 'typescolumnlayout';
 @import 'typedropdown';
+@import 'addtypesform';
 
 body {
     background: #6890f0;
