--- a/src/TypeCalculator/Content/styles/addtypesform.scss
+++ b/src/TypeCalculator/Content/styles/addtypesform.scss
@@ -6,6 +6,7 @@
     padding: 10px;
 
     .addTypesInput {
-        margin: 10px;
+        margin-left: 10px;
+        margin-bottom: 10px;
     }
 }
